# Automaton-Auditor

./: .dockerignore  .env.example  .gitignore  Dockerfile  ENV_SETUP_GUIDE.md  FINAL_SUBMISSION_CHECKLIST.md  GROQ_SETUP.md  LANGSMITH_TRACE_GUIDE.md  MULTI_MODEL_STACK.md  README.md  check_langsmith.py  pyproject.toml  rubric.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  test.yml
.specify/: .gitignore  config.yaml  constitution.md
audit/: interim_evidence.json
audit/report_generated/: audit_report.md
audit/report_generated/Abnet-Melaku1/automation-auditor/: audit_report.md
audit/report_generated/sumeyaaaa/Automaton-Auditor/: audit_report.md  interim_evidence.json
audit/report_onpeer_generated/: audit_report.md  interim_evidence.json
audit/report_onself_generated/: interim_evidence.json
doc/: Architecture.MD
rubric/: week2_rubric.json
specs/: automaton-auditor.spec.md  implementation-plan.md  tasks.md
src/: __init__.py  config.py  exceptions.py  graph.py  state.py
src/nodes/: __init__.py  detectives.py  judges.py  justice.py
src/tools/: __init__.py  ast_tools.py  cleanup_utils.py  code_quality_tools.py  doc_tools.py  file_finder.py  git_tools.py  pdf_tools.py  repo_health_tools.py  repo_tools.py  security_utils.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_ast_tools.py  test_exceptions.py  test_git_tools.py  test_state.py  test_validation.py
