[project]
name = "automaton-auditor"
version = "0.1.0"
description = "Deep LangGraph Swarms for Autonomous Governance - The Digital Courtroom"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-google-genai>=0.0.6",
    "langchain-groq>=0.1.0",
    "langgraph>=0.0.40",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "docling>=1.0.0",
    "pypdf>=3.17.0",
    "pillow>=10.0.0",
    "gitpython>=3.1.40",
    "tree-sitter>=0.20.4",
    "tree-sitter-python>=0.20.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

